Fix image stretch issue (maybe)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -80,6 +80,7 @@ a:active {
 }
 
 #portrait-img {
+  align-self: start;
   border-radius: 50%;
   display: block;
   max-width: 220px;
